Thu Jul 16 08:56:32 2009  Koichi Sasada  <ko1@atdot.net>

	* dir.c (push_glob): re-fix GC problem.

Thu Jul 16 08:55:27 2009  Koichi Sasada  <ko1@atdot.net>

	* common.mk: add method.h.

Thu Jul 16 08:53:26 2009  Koichi Sasada  <ko1@atdot.net>

	* io.c (argf_free): free data body.

Wed Jul 15 23:46:55 2009  Koichi Sasada  <ko1@atdot.net>

	* method.h, vm_core.h: add rb_method_entry_t.  Remove nodes around
	  method management.  This change affect some VM control stack structure.

	* vm.c, vm_insnhelper.c, vm_method.c, vm_eval.c: ditto.  and make some
	  refactoring.

	* insns.def, class.c, eval.c, proc.c, vm_dump.c : ditto.

	* vm_core.h, compile.c (iseq_specialized_instruction): remove
	  VM_CALL_SEND_BIT.  use another optimization tech for Kernel#send.

	* node.h: remove unused node types.

	* ext/objspace/objspace.c (count_nodes): ditto.

	* gc.c: add mark/free functions for method entry.

	* include/ruby/intern.h: remove decl of
	  rb_define_notimplement_method_id().  nobody can use it
	  because noex is not opend.

	* iseq.c (iseq_mark): fix to check ic_method is available.

	* iseq.c (rb_iseq_disasm): fix to use rb_method_get_iseq().

Wed Jul 15 23:45:11 2009  Koichi Sasada  <ko1@atdot.net>

	* dir.c (push_glob): fix GC problem.

Wed Jul 15 17:33:52 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/purelib.rb: translates a fake path to rubygems in $" into
	  an alternative in $: so that Kernel.#require does not load
	  more rubygems.rb.
	  Resolves many failures in test/rubygems/*.

	* gem_prelude.rb (Gem.load_full_rubygems_library): supports case 
	  the rubygems to load is not in $(rubylibprefix).
	  (Gem.path_to_full_rubygems_library): new method for the changes in
	  purelib.rb and Gem.load_full_rubygems_library.
	  (Gem.fake_rubygems_as_loaded): new method.

Wed Jul 15 16:29:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (LIBPATHFLAG): path is already quoted in mkmf.rb.
